Sandbox now builds

--- a/LauncherScreen/LauncherScreen.vcxproj.filters
+++ b/LauncherScreen/LauncherScreen.vcxproj.filters
@@ -10,6 +10,8 @@
       <Filter>Launcher</Filter>
     </ClInclude>
     <ClInclude Include="src\lascpch.h" />
+    <ClInclude Include="src\Launcher.h" />
+    <ClInclude Include="src\Launcher\Options.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Launcher\Window.cpp">
