--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,15 +1,15 @@
 [Window][Debug##Default]
-Pos=64,109
+Pos=-3,20
 Size=400,400
 Collapsed=0
 
-[Window][Hello, world!]
-Pos=110,103
-Size=245,138
+[Window][Launcher]
+Pos=0,0
+Size=550,300
 Collapsed=0
 
-[Window][Launcher]
-Pos=28,19
-Size=455,216
+[Window][Dear ImGui Demo]
+Pos=43,-6
+Size=788,680
 Collapsed=0
 
